[gd_scene load_steps=5 format=2]

[ext_resource path="res://image/emote_exclamation2.png" type="Texture" id=1]
[ext_resource path="res://image/ray.png" type="Texture" id=2]
[ext_resource path="res://script/sideRay.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.2013, 10 )

[node name="sideRay" type="Area2D"]
collision_layer = 64
script = ExtResource( 3 )

[node name="raySprite" type="Sprite" parent="."]
position = Vector2( -165, 0 )
rotation = 1.57079
scale = Vector2( 2.65461, 2.65461 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 14, 514 )

[node name="textBalloon" type="Sprite" parent="."]
position = Vector2( 408, -4 )
scale = Vector2( 2.08451, 2.08451 )
texture = ExtResource( 1 )

[node name="sensor1" type="RayCast2D" parent="."]
position = Vector2( 499.5, 0 )
scale = Vector2( 1, 6.12 )
enabled = true
cast_to = Vector2( -1280, 0 )

[node name="sensor2" type="RayCast2D" parent="."]
position = Vector2( 499.5, 0 )
scale = Vector2( 1, 5.48 )
enabled = true
cast_to = Vector2( -1280, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -165.7, 0 )
scale = Vector2( 51.76, 1.8 )
shape = SubResource( 1 )

[node name="rayTimer" type="Timer" parent="."]
one_shot = true

[node name="textBalloonTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="smallTimer" type="Timer" parent="textBalloonTimer"]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5

[connection signal="gameOver" from="." to="." method="_on_sideRay_gameOver"]
[connection signal="timeout" from="rayTimer" to="." method="_on_rayTimer_timeout"]
[connection signal="timeout" from="textBalloonTimer" to="." method="_on_textBalloonTimer_timeout"]
[connection signal="timeout" from="textBalloonTimer/smallTimer" to="." method="_on_smallTimer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
